src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;



::root {
  color: #fff;
}

* {
  box-sizing: border-box;
  font-family: "Mori";

}
/* Inside your globals.css */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  ::selection {
    background-color: #eeff82;
    color: #000;
  }
}

@font-face {
  font-family: 'PPEditorial';
  src: url('/fonts/Editorial.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Mori';
  src: url('/fonts/Mori-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'PPMondwest';
  src: url('/fonts/Mondwest.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

html, body {
  background-color: #121212; /* Ensure the background is black */
  color: white;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}
.projects{ 
  margin: 0 auto; 
}
.projects-section{
  position: relative;
  z-index: 2;
}




.projects-section{
  cursor: pointer;
}
.projects h1{
  font-family: "Mori";
}



.project-card h2,
.project-card p {
  margin: 0;

}

@media (max-width: 768px) {
  .project-card {
    max-width: 100%;
    
  }

.about-text{
  font-size: 0.9rem;
}

  .project-card img {
    height: full;
    width: 100%;
  }

  .project-card-content {
    padding: 12px;
  }
}

@media (max-width: 480px) {
  .project-card {
    max-width: 100%;
  }

  .project-card img {
    height: 200px;
  }

  .project-card-content {
    padding: 8px;
  }
}

@media (min-width:700px){

  .project-card:hover {
    background-color: transparent;
  }
}


.btn {
display: flex;
width: 80%;
  align-items: center;
  gap: 0.1rem;
}

.project-card {
  display: flex;
  flex-direction: column;
}

@media (min-width: 1024px) {
  .project-card {
    flex-direction: row;
  }
  
}
.visible {
  visibility: visible;
}

.invisible {
  visibility: hidden;
}

hero {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  position: relative;
  background-color: transparent;
}

.hero-content {
  max-width: 90%;
  margin: 0 auto;
  text-align: center;
  z-index: 1;
}

.hero h1 {
  font-family: 'PPEditorial';
  letter-spacing: -0.04em;
  font-size: 8vw; 
}

.hero p {
  margin-bottom: 2rem;
  font-weight: 200;
}

.developer {
  font-family: 'PPMondwest';
  font-size: 7vw;
}

.cursive {
  font-family: "Great Vibes", cursive;
  font-weight: 400;
  font-style: normal;
  font-size: 7vw;
  line-height: -0.2;
}

.hero-small {
  font-family: 'Inter', sans-serif;
  font-weight: 100;
}

.scroll-indicator {
  animation: bounce 1.5s infinite;
  cursor: pointer;
}

@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-12px);
  }
  60% {
    transform: translateY(-6px);
  }
}

@media (max-width: 640px) {
  .hero-content h1 {
    font-size: 6vw;
  }
  .hero-content p {
    font-size: 0.2rem;
  }
}

@media (min-width: 1024px) {
  .hero-content h1 {
    font-size: 6vw;
  }
  .hero-content p {
    font-size: 0.9rem;
  }
}

@media (max-width: 1024px) {
  .hero-content h1 {
    font-size: 7vw !important;
  }
  .developer {
    font-size: 9vw !important;
  }
  .cursive {
    font-size: 8vw !important;
  }
}

@media (min-width: 1440px) {
  .hero-content h1 {
    font-size: 5vw;
  }
  .hero-content p {
    font-size: 1.2rem;
  }
  .developer {
    font-size: 6vw;
  }
}

@media (max-height: 500px) {
  .hero {
    padding-top: 7rem;
  }
}

.hero-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100dvh; /* Use dynamic viewport height */
  min-height: -webkit-fill-available; /* Fallback for iOS Safari */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: 1;
  overflow: hidden;
}

.hero-spacer {
  height: 8rem;
}

@media (min-width: 768px) {
  .hero-spacer {
    height: 10rem;
  }
}

@media (min-width: 1024px) {
  .hero-spacer {
    height: 42rem;
  }
}

@media (min-width: 1280px) {
  .hero-spacer {
    height: 52rem;
  }
}

.hero-name,
.hero-head,
.icon {
  margin: 0;
  padding: 0;
  line-height: 1.2;
}

.hero-name {
  font-size: clamp(1rem, 5.3vw, 5.3rem);
}

.cursive {
  font-size: clamp(1rem, 7vw, 7rem);
}

.hero-head {
  font-size: clamp(1rem, 5.3vw, 5.3rem);
}

.developer {
  font-size: clamp(1rem, 6.5vw, 6.5rem);
}

.icon {
  font-size: clamp(1rem, 5.3vw, 5.3rem);
}

@media (orientation: landscape) and (max-height: 500px) {
  .hero-container {
    height: auto !important;
    min-height: 100vh !important;
  }
}

